# SFML-platformer

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: Angle.hpp.4A6053432D114E8F.idx  Angle.inl.F2F8BA61B093657E.idx  BlendMode.hpp.981924B905F29FE6.idx  CircleShape.hpp.3EC2C9513D2F6C09.idx  Clipboard.hpp.7065A1E76E805AAB.idx  Clock.hpp.CB47D497BC89AD56.idx  Color.hpp.05DFEF2A2C643BC8.idx  Color.inl.BB9284F865072A58.idx  Config.hpp.2D83FB3A0AE5D2D3.idx  Context.hpp.E1E642AA102BF609.idx  ContextSettings.hpp.3DEAA96E5FDAA286.idx  ConvexShape.hpp.BE1400ACFE20E171.idx  CoordinateType.hpp.83861B58C1FD4B25.idx  Cursor.hpp.704CAB067FF70A5E.idx  Drawable.hpp.B1CA43680D5B72AB.idx  Err.hpp.6DFDC965869BCE54.idx  Event.hpp.D6B3E1951293B1C1.idx  Event.inl.25FA7A6235195E11.idx  Exception.hpp.3CF3A3D84C0E8379.idx  Export.hpp.851D5A90E334A25A.idx  Export.hpp.C0128252BEEBF990.idx  Export.hpp.D50FD748BBBD2069.idx  FileInputStream.hpp.A823CE73A59AC839.idx  Font.hpp.FA40732E26EC911A.idx  Game.cpp.B1A0D9962235CED5.idx  Gameobjects.cpp.D5195F755B1C999A.idx  GlResource.hpp.2BC2C6B5EF560E9C.idx  Glsl.hpp.606C4AFF5B9E32DF.idx  Glsl.inl.3C9B9CFF93868BB1.idx  Glyph.hpp.97E8CF0F2581094F.idx  Graphics.hpp.ACC3D8F8474B37B3.idx  Image.hpp.AF5942D7E163D7B0.idx  InputStream.hpp.2AB1F7E37965C4B2.idx  Joystick.hpp.E95C8F2F326FAF7C.idx  Keyboard.hpp.412B5DA359C97874.idx  MemoryInputStream.hpp.1F253A93B6DD052D.idx  Mouse.hpp.D1A5B6F7A615B32C.idx  PrimitiveType.hpp.2C9BD91B7FCBAA08.idx  Rect.hpp.55E1C0B8A0D9DA00.idx  (+47 more)
include/: game.hpp  gameobjects.hpp
src/: Game.cpp  Gameobjects.cpp  main.cpp
